--- a/match/obsidian.yml
+++ b/match/obsidian.yml
@@ -1,11 +1,16 @@
 matches:
 # Obsidian
+
+# This espanso shortcut inserts a page break into the Obsidian Markdown file. This has been used to force hard page breaks
+# when converting the Markdown file to a PDF file
   - trigger: ":pb"
     replace: |
              <div style="page-break-after: always;"></div>
+# This espanso shortcut insert the text NOTE:  in bold red text
   - trigger: ":boldrednote"
     replace: |
              <strong style="color: red;">NOTE:</strong>
+# This espanso shortcut insert the text NOTE:  in bold green text
   - trigger: ":boldgreennote"
     replace: |
              <strong style="color: green;">NOTE:</strong>
